arrumei o js e a main page

--- a/index.html
+++ b/index.html
@@ -40,27 +40,37 @@
         <article class="container-produtos">
             <div class="box">
                 <div class="box-vinho">
-                    <img class="vinho" src="imgs/vinho1.png">
+                    <img class="vinho" src="fotos vinhos/Freixenet Pinot Grigio.png">
+                </div>
+                <div style="text-align: center;">
+                    Freixenet Pinot Grigio
                 </div>
                 <div class="detalhes">
+                    <input type="button" class="compra" value="Comprar" onclick="comprar1()">
                 </div>
             </div>
 
             <div class="box">
                 <div class="box-vinho">
-                    <img class="vinho" src="imgs/vinho2.png">
+                    <img class="vinho" src="fotos vinhos/Luiz Argenta Jovem Red Audrey.png">
+                </div>
+                <div style="text-align: center;">
+                    Luiz Argenta Jovem Red Audrey
                 </div>
                 <div class="detalhes">
-                    <input type="button" class="compra" value="Comprar" onclick="comprar()">
+                    <input type="button" class="compra" value="Comprar" onclick="comprar2()">
                 </div>
             </div>
 
             <div class="box">
                 <div class="box-vinho">
-                    <img class="vinho" src="imgs/vinho3.png">
+                    <img class="vinho" src="fotos vinhos/Manus Liberum Barbera Clairet Rosé.png">
+                </div>
+                <div style="text-align: center;">
+                    Manus Liberum Barbera Clairet Rosé
                 </div>
                 <div class="detalhes">
-
+                    <input type="button" class="compra" value="Comprar" onclick="comprar3()">
                 </div>
             </div>
         </article>
