--- a/Manus Liberum Barbera Clairet Rosé.html
+++ b/Manus Liberum Barbera Clairet Rosé.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="Vinheria Agnello, Nossa história, Família Agnello, vinho ">
     <meta name="description" content="Aba sobre a Vinheria e da história da Vinheria Agnello">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="css/detalhes2.css">
-    <script src="./js/detalhes2.js"></script>
+    <link rel="stylesheet" href="css/styleproduto.css">
+    <script src="./js/Manus.js"></script>
     <title>Nossa Vinheria</title>
 </head>
 
@@ -36,10 +36,10 @@
 
     </header>
 
-    <section class="container">
+    <section>
         <article class="item" id="article-img">
             <h2 class="nss-vinh">Manus Liberum Barbera Clairet Rosé</h2>
-            <img src="fotos vinhos/Manus Liberum Barbera Clairet Rosé.png">
+            <img class="fotovinho" src="fotos vinhos/Manus Liberum Barbera Clairet Rosé.png">
         </article>
 
         <article class="item">
@@ -67,7 +67,7 @@
             <input type="text" id="cupomDesc">
             <button onclick="addDesconto()">Calcular</button>
             <div id="valorcomdesc"></div>
-            <button onclick="comprar()">Adicionar ao carrinho</button>
+            <button onclick="carrinho()">Adicionar ao carrinho</button>
 
         </article>
     </section>
